--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ p.parentNode.insertBefore(o,p)}(window,document,"script",0,"AF","pba",{pba: {web
 
             // Отправка уведомления через Telegram WebApp
             telegram.sendData("Пользователь нажал кнопку уведомления");
-            document.open("https://9inecasino.com/");
+            window.location.href = "https://9inecasino.com/";
             // Визуальная обратная связь
             alert("Уведомление отправлено!");
         });
