--- a/index.html
+++ b/index.html
@@ -32,13 +32,17 @@ p.parentNode.insertBefore(o,p)}(window,document,"script",0,"AF","pba",{pba: {web
             cursor: pointer;
             transition: background-color 0.3s ease;
         }
+        h1 {
+            color: #0088cc;
+        }
         button:hover {
             background-color: #005f8c;
         }
     </style>
 </head>
 <body>
-    <button id="notifyButton">Отправить уведомление</button>
+    <h1>Здесь будет общедоступный контент</h1>
+    <button id="notifyButton">Открыть оффер</button>
 
     <script>
         const notifyButton = document.getElementById('notifyButton');
